# IEGPerTest

./: .gitignore  CONTRIBUTING.md  IEGPerTest.sln  MINIMAL_DEPENDENCIES.md  MODIFICATIONS_TODO.md  PACKAGING_FIX_SUMMARY.md  README.md  VERIFICATION_REPORT.md  code.txt  export_dependencies.ps1  project_dashboard.html  模拟工具需求设计.txt  项目实施文档.txt
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  question.md
.github/workflows/: ci.yml
.kiro/specs/raw-packet-sender/: .config.kiro  design.md  requirements.md  tasks.md
WLServerTest/: ProfileConfig.cpp  WLServerTest.aps  WLServerTest.cpp  WLServerTest.vcproj  WLServerTestDlg.h  client.h  stdafx.cpp
WLServerTest/DOC/: USM支持1000客户端测试工具说明.docx
WLServerTest/Release/: WLJsonParse.cpp
WLServerTest/res/: WLServerTest.rc2
docs/: IEG&EDR V300R011C01&C11 接口设计说明书.docx  SimulatorAppPublish_README.md  THREAD_MODEL_CLARIFICATION.md  THREAD_MODEL_CORRECT.md  分析-C#能否做到C++同等效果.md  分析-v3.7.26-Channel架构瓶颈与直写方案.md  分析-串行分支与并行分支结果相同的原因.md  分析-高EPS心跳掉线原因.md  开发计划-v4-白名单策略任务面板.md  日志分类对齐报告_2026-02-09.md  经验教训-日志类型实现.md  里程碑-2026-02-07.md  里程碑-Version2.0-UI完善.md  项目实施文档.md  项目暂停状态-2026-02-12.md  项目状态-2026-02-25.md
docs/JSON/: field_mapping.md
docs/bugs/: BUG-2026-001-2000客户端心跳稳定性.md
scripts/: analyze_failures.py  build_and_run.ps1  create_shortcut.ps1  estimate_client_limit.ps1  extract_full_json.py  extract_interface_docx_index.py  extract_specific_tables.py  publish_all.ps1  publish_devrunner.ps1  publish_simulatorapp.ps1  publish_simulatorapp_singlefile.ps1  publish_simulatorrunner.ps1  publish_testreceiver.ps1  search_interface_tables.py  search_paragraphs.py  search_url_context.py  start_dashboard.ps1  summarize_interface_doc_index.py  verify_logtype_fix.ps1
src/DevTools/: DevRunner.csproj  Program.cs
src/NativeEngine/: CMakeLists.txt  build.bat  native_engine.cpp  native_engine.h
src/NativeSender/: CMakeLists.txt  NativeSender.cpp  NativeSender.h
src/RawPacketEngine/: CMakeLists.txt  raw_packet_engine.cpp  raw_packet_engine.h
src/SimulatorApp/: App.xaml  App.xaml.cs  LogCategoryHelpWindow.xaml  LogCategoryHelpWindow.xaml.cs  MainWindow.xaml  MainWindow.xaml.cs  PortAdvancedWindow.xaml  PortAdvancedWindow.xaml.cs  RegAdvancedWindow.xaml  RegAdvancedWindow.xaml.cs  SimulatorApp.csproj  SshLogWindow.xaml  SshLogWindow.xaml.cs  TcpDiagWindow.xaml  TcpDiagWindow.xaml.cs
src/SimulatorApp/ViewModels/: MainViewModel.cs  RawPacketViewModel.cs  RelayCommand.cs
src/SimulatorApp/Views/: RawPacketWindow.xaml  RawPacketWindow.xaml.cs  StreamEditDialog.xaml  StreamEditDialog.xaml.cs
src/SimulatorLib/: SimulatorLib.csproj
src/SimulatorLib.Tests/: EtcFileParserTests.cs  InputValidatorTests.cs  PacketTemplateBuilderTests.cs  RoundRobinTests.cs  SimulatorLib.Tests.csproj
src/SimulatorLib/Models/: LogCategory.cs  TaskModel.cs  TaskRecord.cs
src/SimulatorLib/Network/: INetworkSender.cs  TcpSender.cs  (+4 more)
src/SimulatorRunner/: Program.cs  SimulatorRunner.csproj
src/TestReceiver/: Program.cs
tests/: config.json
tests/SimulatorApp.Tests/: MainViewModelTests.cs  PlaceholderTest.cs  SimulatorApp.Tests.csproj
tests/SimulatorLib.Tests/: AppConfigTests.cs  ClientsPersistenceTests.cs  PtProtocolTests.cs  SimulatorLib.Tests.csproj  SmokeTests.cs
(+28 files in other folders)
